[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "MyFirtProject"
authors = ["fooxeed <fooxeed@mail.ru>"]
readme = "README.md"
packages = [
  { include = "brain_games" },
]
[tool.poetry.dependencies]
python = "^3.10"
prompt = "^0.4.1"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.games.brain_games:brain_games"
brain-even = "brain_games.scripts.games.brain_even:my_even"
brain-calc = "brain_games.scripts.games.brain_calc:my_calc"
brain-gcd = "brain_games.scripts.games.brain_gcd:my_gcd"
brain-progression = "brain_games.scripts.games.brain_progression:my_progression"
brain-prime = "brain_games.scripts.games.brain_prime:my_prime"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
