[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "MyFirstProject"
authors = ["fooxeed <fooxeed@mail.ru>"]
readme = "README.md"
packages = [
  { include = "brain_games" },
]
[tool.poetry.dependencies]
python = "^3.10"
prompt = "^0.4.1"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:py_games"
brain-even = "brain_games.scripts.brain_even:py_even"
brain-calc = "brain_games.scripts.brain_calc:py_calc"
brain-gcd = "brain_games.scripts.brain_gcd:py_gcd"
brain-progression = "brain_games.scripts.brain_progression:py_proression"
brain-prime = "brain_games.scripts.brain_prime:py_prime"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
